Hardcore fix of z-index added

--- a/src/sass/sections/_dice.scss
+++ b/src/sass/sections/_dice.scss
@@ -4,10 +4,6 @@
     align-items: center;
 }
 
-.dice-wrapper{
-    z-index: -1;
-}
-
 .dice {
     position: relative;
     width: 100px;
